--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -940,6 +940,18 @@ CanvasPanel.Performance=True
 CanvasPanel.Clipping=True
 CanvasPanel.Navigation=True
 CanvasPanel.Localization=True
+WBP_Crosshair_C.Appearance=True
+WBP_Crosshair_C.Designer=True
+WBP_Crosshair_C.Input=True
+WBP_Crosshair_C.Interaction=True
+WBP_Crosshair_C.Performance=True
+WBP_Crosshair_C.Layout=True
+WBP_Crosshair_C.Behavior=True
+WBP_Crosshair_C.Render Transform=True
+WBP_Crosshair_C.Accessibility=True
+WBP_Crosshair_C.Clipping=True
+WBP_Crosshair_C.Navigation=True
+WBP_Crosshair_C.Localization=True
 
 [ModuleFileTracking]
 TheMaze.TimeStamp=2021.03.20-21.34.35
@@ -1843,6 +1855,7 @@ ActorComponent=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -1866,9 +1879,9 @@ RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/WBP_Crosshair
-MRUItem1=/Game/Blueprints/BP_CFPSCharacter
-MRUItem2=/Game/Blueprints/BP_Crosshair
-MRUItem3=/Game/Materials/BP_FloorMaterialInstance
+MRUItem1=/Game/Materials/BP_FloorMaterialInstance
+MRUItem2=/Game/Blueprints/BP_CFPSCharacter
+MRUItem3=/Game/Blueprints/BP_Crosshair
 MRUItem4=/Game/Materials/BP_FloorMaterial
 MRUItem5=/Game/Materials/BP_CharacterMaterialInstance
 MRUItem6=/Game/Materials/BP_CharacterMaterial
@@ -2019,7 +2032,7 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
