Updated LineTrace function

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -205,7 +205,8 @@ MaterialInstanceConstant=
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -952,9 +953,14 @@ WBP_Crosshair_C.Accessibility=True
 WBP_Crosshair_C.Clipping=True
 WBP_Crosshair_C.Navigation=True
 WBP_Crosshair_C.Localization=True
+BP_CFPSCharacter_C.Interaction=True
+K2Node_InputVectorAxisEvent.Input=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.03.20-21.34.35
+TheMaze.TimeStamp=2021.03.20-23.25.28
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -1780,6 +1786,8 @@ MovieSceneCapture.TimeStamp=2021.03.03-22.11.15
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2021.03.03-22.11.02
 BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2021.03.03-22.11.21
+SequencerWidgets.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=RigLogic
@@ -1878,9 +1886,9 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/WBP_Crosshair
-MRUItem1=/Game/Materials/BP_FloorMaterialInstance
-MRUItem2=/Game/Blueprints/BP_CFPSCharacter
+MRUItem0=/Game/Blueprints/BP_CFPSCharacter
+MRUItem1=/Game/Blueprints/WBP_Crosshair
+MRUItem2=/Game/Materials/BP_FloorMaterialInstance
 MRUItem3=/Game/Blueprints/BP_Crosshair
 MRUItem4=/Game/Materials/BP_FloorMaterial
 MRUItem5=/Game/Materials/BP_CharacterMaterialInstance
@@ -1925,7 +1933,7 @@ Bookmarks=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
-SaveOnCompile=SoC_Never
+SaveOnCompile=SoC_SuccessOnly
 bJumpToNodeErrors=False
 bAllowExplicitImpureNodeDisabling=False
 bShowActionMenuItemSignatures=False
@@ -1940,7 +1948,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
