Added FX to collectible object Added Destory function to collectible object

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ MeshProcessingEnterpriseSettings=GameMapsSettings.DefaultModes.SelectedGameModeD
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1042,10 +1042,11 @@ BP_CollectibleSphere_C.Materials=True
 BP_CollectibleSphere_C.ComponentTick=True
 BP_CollectibleSphere_C.ComponentReplication=True
 BP_CollectibleSphere_C.Variable=True
+BP_CollectibleSphere_C.Effects=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.03.24-21.20.37
-TheMaze.LastCompileMethod=Unknown
+TheMaze.TimeStamp=2021.03.24-22.25.39
+TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -1916,7 +1917,7 @@ InstalledPlugins=XRVisualization
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.ThumbnailSizeScale=0.526786
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -2087,7 +2088,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=SourceControl
+LastLogListing=EditorErrors
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
