Fixed objects pickup function

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ MeshProcessingEnterpriseSettings=GameMapsSettings.DefaultModes.SelectedGameModeD
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1043,9 +1043,21 @@ BP_CollectibleSphere_C.ComponentTick=True
 BP_CollectibleSphere_C.ComponentReplication=True
 BP_CollectibleSphere_C.Variable=True
 BP_CollectibleSphere_C.Effects=True
+WBP_Counter_C.Appearance=True
+WBP_Counter_C.Designer=True
+WBP_Counter_C.Input=True
+WBP_Counter_C.Interaction=True
+WBP_Counter_C.Performance=True
+WBP_Counter_C.Layout=True
+WBP_Counter_C.Behavior=True
+WBP_Counter_C.Render Transform=True
+WBP_Counter_C.Accessibility=True
+WBP_Counter_C.Clipping=True
+WBP_Counter_C.Navigation=True
+WBP_Counter_C.Localization=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.03.24-22.25.39
+TheMaze.TimeStamp=2021.03.27-20.28.21
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -1930,7 +1942,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2003,8 +2015,8 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
-RecentlyPlaced=/Game/Materials/BP_CharacterMaterial.BP_CharacterMaterial;
 RecentlyPlaced=/Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere;
+RecentlyPlaced=/Game/Materials/BP_CharacterMaterial.BP_CharacterMaterial;
 RecentlyPlaced=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D.StaticMesh_WallObject_C4D;
 RecentlyPlaced=/Game/Meshes/StaticMesh.StaticMesh;
 RecentlyPlaced=/Game/Materials/BP_FloorMaterialInstance.BP_FloorMaterialInstance;
@@ -2013,21 +2025,22 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_CollectibleSphere
-MRUItem1=/Game/Blueprints/BP_CFPSCharacter
-MRUItem2=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem3=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem4=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem5=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
-MRUItem6=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
-MRUItem7=/Game/Blueprints/WBP_Crosshair
-MRUItem8=/Game/Materials/BP_FloorMaterialInstance
-MRUItem9=/Game/Blueprints/BP_Crosshair
-MRUItem10=/Game/Materials/BP_FloorMaterial
-MRUItem11=/Game/Materials/BP_CharacterMaterialInstance
-MRUItem12=/Game/Materials/BP_CharacterMaterial
-MRUItem13=/Game/Blueprints/BP_MazeGameMode
-MRUItem14=/Game/BP_CFPSCharacter
+MRUItem0=/Game/Blueprints/BP_CFPSCharacter
+MRUItem1=/Game/Blueprints/BP_CollectibleSphere
+MRUItem2=/Game/Blueprints/WBP_Counter
+MRUItem3=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem4=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem5=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
+MRUItem6=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
+MRUItem7=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
+MRUItem8=/Game/Blueprints/WBP_Crosshair
+MRUItem9=/Game/Materials/BP_FloorMaterialInstance
+MRUItem10=/Game/Blueprints/BP_Crosshair
+MRUItem11=/Game/Materials/BP_FloorMaterial
+MRUItem12=/Game/Materials/BP_CharacterMaterialInstance
+MRUItem13=/Game/Materials/BP_CharacterMaterial
+MRUItem14=/Game/Blueprints/BP_MazeGameMode
+MRUItem15=/Game/BP_CFPSCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2044,7 +2057,7 @@ MRUItem14=/Game/BP_CFPSCharacter
 /Game/Assets/Meshes/C4D_Wall_Melange/MazeWall.MazeWall=1
 /Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7.Cube_7=1
 /Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D.StaticMesh_WallObject_C4D=1
-/Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere=1
+/Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
