--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ MeshProcessingEnterpriseSettings=GameMapsSettings.DefaultModes.SelectedGameModeD
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1055,9 +1055,26 @@ WBP_Counter_C.Accessibility=True
 WBP_Counter_C.Clipping=True
 WBP_Counter_C.Navigation=True
 WBP_Counter_C.Localization=True
+ExtractionZone.Actor=True
+ExtractionZone.Input=True
+ExtractionZone.Collision=True
+ExtractionZone.Replication=True
+ExtractionZone.Rendering=True
+BP_ExtractionZone_C.TransformCommon=True
+BP_ExtractionZone_C.Rendering=True
+BP_ExtractionZone_C.Replication=True
+BP_ExtractionZone_C.Collision=True
+BP_ExtractionZone_C.Input=True
+BP_ExtractionZone_C.Actor=True
+BP_ExtractionZone_C.Tick=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentTick=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.03.27-20.28.21
+TheMaze.TimeStamp=2021.03.27-22.29.48
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -1951,6 +1968,25 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab2.SourcesExpanded=False
+ContentBrowserTab2.Locked=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000
+ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000
+ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000
+ContentBrowserTab2.ActiveTypeFilters=
+ContentBrowserTab2.EnabledTypeFilters=
+ContentBrowserTab2.ActiveFrontendFilters=
+ContentBrowserTab2.EnabledFrontendFilters=
+ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.CollectionsExpanded=True
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ViewMode=0
+ContentBrowserTab2.ThumbnailSizeScale=0.180000
+ContentBrowserTab2.CurrentViewType=1
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2015,6 +2051,8 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Script/TheMaze.ExtractionZone;
+RecentlyPlaced=/Game/Blueprints/BP_ExtractionZone.BP_ExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere;
 RecentlyPlaced=/Game/Materials/BP_CharacterMaterial.BP_CharacterMaterial;
 RecentlyPlaced=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D.StaticMesh_WallObject_C4D;
@@ -2025,22 +2063,23 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_CFPSCharacter
+MRUItem0=/Game/Blueprints/BP_ExtractionZone
 MRUItem1=/Game/Blueprints/BP_CollectibleSphere
-MRUItem2=/Game/Blueprints/WBP_Counter
-MRUItem3=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem4=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem5=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem6=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
-MRUItem7=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
-MRUItem8=/Game/Blueprints/WBP_Crosshair
-MRUItem9=/Game/Materials/BP_FloorMaterialInstance
-MRUItem10=/Game/Blueprints/BP_Crosshair
-MRUItem11=/Game/Materials/BP_FloorMaterial
-MRUItem12=/Game/Materials/BP_CharacterMaterialInstance
-MRUItem13=/Game/Materials/BP_CharacterMaterial
-MRUItem14=/Game/Blueprints/BP_MazeGameMode
-MRUItem15=/Game/BP_CFPSCharacter
+MRUItem2=/Game/Blueprints/BP_MazeGameMode
+MRUItem3=/Game/Blueprints/BP_CFPSCharacter
+MRUItem4=/Game/Blueprints/WBP_Counter
+MRUItem5=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem6=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem7=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
+MRUItem8=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
+MRUItem9=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
+MRUItem10=/Game/Blueprints/WBP_Crosshair
+MRUItem11=/Game/Materials/BP_FloorMaterialInstance
+MRUItem12=/Game/Blueprints/BP_Crosshair
+MRUItem13=/Game/Materials/BP_FloorMaterial
+MRUItem14=/Game/Materials/BP_CharacterMaterialInstance
+MRUItem15=/Game/Materials/BP_CharacterMaterial
+MRUItem16=/Game/BP_CFPSCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2058,6 +2097,7 @@ MRUItem15=/Game/BP_CFPSCharacter
 /Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7.Cube_7=1
 /Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D.StaticMesh_WallObject_C4D=1
 /Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere=0
+/Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2101,7 +2141,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=CompilerResultsLog
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
