--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -202,12 +202,13 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 MaterialInstanceConstant=
 MeshProcessingEnterpriseSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1072,9 +1073,38 @@ SceneComponent.Sockets=True
 SceneComponent.ComponentTick=True
 SceneComponent.ComponentReplication=True
 SceneComponent.Events=True
+ExtractionZone.LOD=False
+ExtractionZone.Cooking=False
+ExtractionZone2_Blueprint_C.TransformCommon=True
+ExtractionZone2_Blueprint_C.Rendering=True
+ExtractionZone2_Blueprint_C.Replication=True
+ExtractionZone2_Blueprint_C.Collision=True
+ExtractionZone2_Blueprint_C.Input=True
+ExtractionZone2_Blueprint_C.Actor=True
+ExtractionZone2_Blueprint_C.Tick=True
+PropertyWrapper.Events=True
+MyExtractionZone_C.Tick=True
+MyExtractionZone_C.Replication=True
+MyExtractionZone_C.Rendering=True
+MyExtractionZone_C.Collision=True
+MyExtractionZone_C.Actor=True
+MyExtractionZone_C.Input=True
+EditorKeyboardShortcutSettings.Datasmith=True
+EditorKeyboardShortcutSettings.FVariantManagerEditorCommands=True
+FPSExtractionZone.Actor=True
+FPSExtractionZone.Input=True
+FPSExtractionZone.Replication=True
+FPSExtractionZone.Cooking=True
+FPSExtractionZone.Rendering=True
+FPSExtractionZone.Tags=True
+FPSExtractionZone.Collision=True
+FPSExtractionZone.Physics=True
+FPSExtractionZone.Navigation=True
+FPSExtractionZone.Shape=True
+FPSExtractionZone.TransformCommon=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.03.27-22.29.48
+TheMaze.TimeStamp=2021.03.28-20.56.30
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -1959,7 +1989,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Classes_Game/TheMaze/Public
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2002,6 +2032,7 @@ EditorPerProjectUserSettings=True
 SourceCodeAccessSettings=True
 EditorExperimentalSettings=True
 EditorSettings=True
+LiveCodingSettings=True
 
 [RootWindow]
 ScreenPosition=X=336.000 Y=44.000
@@ -2051,6 +2082,7 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Script/TheMaze.FPSExtractionZone;
 RecentlyPlaced=/Script/TheMaze.ExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_ExtractionZone.BP_ExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere;
@@ -2063,23 +2095,25 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_ExtractionZone
-MRUItem1=/Game/Blueprints/BP_CollectibleSphere
-MRUItem2=/Game/Blueprints/BP_MazeGameMode
-MRUItem3=/Game/Blueprints/BP_CFPSCharacter
-MRUItem4=/Game/Blueprints/WBP_Counter
-MRUItem5=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem6=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem7=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem8=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
-MRUItem9=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
-MRUItem10=/Game/Blueprints/WBP_Crosshair
-MRUItem11=/Game/Materials/BP_FloorMaterialInstance
-MRUItem12=/Game/Blueprints/BP_Crosshair
-MRUItem13=/Game/Materials/BP_FloorMaterial
-MRUItem14=/Game/Materials/BP_CharacterMaterialInstance
-MRUItem15=/Game/Materials/BP_CharacterMaterial
-MRUItem16=/Game/BP_CFPSCharacter
+MRUItem0=/Game/MyExtractionZone
+MRUItem1=/Game/Blueprints/BP_ExtractionZone
+MRUItem2=/Game/Blueprints/ExtractionZone2_Blueprint
+MRUItem3=/Game/Blueprints/BP_CollectibleSphere
+MRUItem4=/Game/Blueprints/BP_MazeGameMode
+MRUItem5=/Game/Blueprints/BP_CFPSCharacter
+MRUItem6=/Game/Blueprints/WBP_Counter
+MRUItem7=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem8=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem9=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
+MRUItem10=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
+MRUItem11=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
+MRUItem12=/Game/Blueprints/WBP_Crosshair
+MRUItem13=/Game/Materials/BP_FloorMaterialInstance
+MRUItem14=/Game/Blueprints/BP_Crosshair
+MRUItem15=/Game/Materials/BP_FloorMaterial
+MRUItem16=/Game/Materials/BP_CharacterMaterialInstance
+MRUItem17=/Game/Materials/BP_CharacterMaterial
+MRUItem18=/Game/BP_CFPSCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2098,6 +2132,8 @@ MRUItem16=/Game/BP_CFPSCharacter
 /Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D.StaticMesh_WallObject_C4D=1
 /Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere=0
 /Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode=1
+/Game/Blueprints/ExtractionZone2_Blueprint.ExtractionZone2_Blueprint=1
+/Game/Maps/Main.Main:PersistentLevel.ExtractionZone_1=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2298,4 +2334,9 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
 
