Extraction Zone Update

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1102,6 +1102,30 @@ FPSExtractionZone.Physics=True
 FPSExtractionZone.Navigation=True
 FPSExtractionZone.Shape=True
 FPSExtractionZone.TransformCommon=True
+BP_CFPSCharacter_C.LOD=False
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+BP_PointsWidget_C.Appearance=True
+BP_PointsWidget_C.Designer=True
+BP_PointsWidget_C.Input=True
+BP_PointsWidget_C.Interaction=True
+BP_PointsWidget_C.Performance=True
+BP_PointsWidget_C.Layout=True
+BP_PointsWidget_C.Behavior=True
+BP_PointsWidget_C.Render Transform=True
+BP_PointsWidget_C.Accessibility=True
+BP_PointsWidget_C.Clipping=True
+BP_PointsWidget_C.Navigation=True
+BP_PointsWidget_C.Localization=True
 
 [ModuleFileTracking]
 TheMaze.TimeStamp=2021.04.09-20.54.48
@@ -1989,7 +2013,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/TheMaze/Public
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2095,25 +2119,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MyExtractionZone
-MRUItem1=/Game/Blueprints/BP_ExtractionZone
-MRUItem2=/Game/Blueprints/ExtractionZone2_Blueprint
-MRUItem3=/Game/Blueprints/BP_CollectibleSphere
-MRUItem4=/Game/Blueprints/BP_MazeGameMode
-MRUItem5=/Game/Blueprints/BP_CFPSCharacter
-MRUItem6=/Game/Blueprints/WBP_Counter
-MRUItem7=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem8=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem9=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem10=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
-MRUItem11=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
-MRUItem12=/Game/Blueprints/WBP_Crosshair
-MRUItem13=/Game/Materials/BP_FloorMaterialInstance
-MRUItem14=/Game/Blueprints/BP_Crosshair
-MRUItem15=/Game/Materials/BP_FloorMaterial
-MRUItem16=/Game/Materials/BP_CharacterMaterialInstance
-MRUItem17=/Game/Materials/BP_CharacterMaterial
-MRUItem18=/Game/BP_CFPSCharacter
+MRUItem0=/Game/Blueprints/BP_PointsWidget
+MRUItem1=/Game/Blueprints/BP_CFPSCharacter
+MRUItem2=/Game/MyExtractionZone
+MRUItem3=/Game/Blueprints/BP_ExtractionZone
+MRUItem4=/Game/Blueprints/ExtractionZone2_Blueprint
+MRUItem5=/Game/Blueprints/BP_CollectibleSphere
+MRUItem6=/Game/Blueprints/BP_MazeGameMode
+MRUItem7=/Game/Blueprints/WBP_Counter
+MRUItem8=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem9=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem10=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
+MRUItem11=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
+MRUItem12=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
+MRUItem13=/Game/Blueprints/WBP_Crosshair
+MRUItem14=/Game/Materials/BP_FloorMaterialInstance
+MRUItem15=/Game/Blueprints/BP_Crosshair
+MRUItem16=/Game/Materials/BP_FloorMaterial
+MRUItem17=/Game/Materials/BP_CharacterMaterialInstance
+MRUItem18=/Game/Materials/BP_CharacterMaterial
+MRUItem19=/Game/BP_CFPSCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2134,6 +2159,7 @@ MRUItem18=/Game/BP_CFPSCharacter
 /Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode=1
 /Game/Blueprints/ExtractionZone2_Blueprint.ExtractionZone2_Blueprint=1
 /Game/Maps/Main.Main:PersistentLevel.ExtractionZone_1=1
+/Game/Blueprints/BP_PointsWidget.BP_PointsWidget=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
