Score counter updated

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -210,7 +210,7 @@ LastLevel=/Game/Maps/Main
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
-OpenAssetsAtExit=/Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere
+OpenAssetsAtExit=/Game/Blueprints/WBP_Crosshair.WBP_Crosshair
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1170,10 +1170,36 @@ TextRenderComponent.Tags=True
 TextRenderComponent.ComponentReplication=True
 TextRenderComponent.Cooking=True
 TextRenderComponent.Events=True
+BP_CFPSCharacter_C.Default=True
+K2Node_VariableSet.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+EditableTextBox.Layout=True
+EditableTextBox.Content=True
+EditableTextBox.Appearance=True
+EditableTextBox.Accessibility=True
+EditableTextBox.Behavior=True
+EditableTextBox.Render Transform=True
+EditableTextBox.Performance=True
+EditableTextBox.Clipping=True
+EditableTextBox.Navigation=True
+EditableTextBox.Localization=True
+EditableTextBox.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.04.11-16.19.56
-TheMaze.LastCompileMethod=External
+TheMaze.TimeStamp=2021.04.11-20.01.00
+TheMaze.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2134,6 +2160,10 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+TextBlock=
+TextLayoutWidget=
+Widget=
+Visual=
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2163,26 +2193,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_CollectibleSphere
+MRUItem0=/Game/Blueprints/WBP_Crosshair
 MRUItem1=/Game/Blueprints/BP_CFPSCharacter
-MRUItem2=/Game/Blueprints/BP_PointsWidget
-MRUItem3=/Game/MyExtractionZone
-MRUItem4=/Game/Blueprints/BP_ExtractionZone
-MRUItem5=/Game/Blueprints/ExtractionZone2_Blueprint
-MRUItem6=/Game/Blueprints/BP_MazeGameMode
-MRUItem7=/Game/Blueprints/WBP_Counter
-MRUItem8=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem9=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem10=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem11=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
-MRUItem12=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
-MRUItem13=/Game/Blueprints/WBP_Crosshair
-MRUItem14=/Game/Materials/BP_FloorMaterialInstance
-MRUItem15=/Game/Blueprints/BP_Crosshair
-MRUItem16=/Game/Materials/BP_FloorMaterial
-MRUItem17=/Game/Materials/BP_CharacterMaterialInstance
-MRUItem18=/Game/Materials/BP_CharacterMaterial
-MRUItem19=/Game/BP_CFPSCharacter
+MRUItem2=/Game/Blueprints/WBP_ScoreCounter
+MRUItem3=/Game/Blueprints/BP_CollectibleSphere
+MRUItem4=/Game/Blueprints/BP_PointsWidget
+MRUItem5=/Game/MyExtractionZone
+MRUItem6=/Game/Blueprints/BP_ExtractionZone
+MRUItem7=/Game/Blueprints/ExtractionZone2_Blueprint
+MRUItem8=/Game/Blueprints/BP_MazeGameMode
+MRUItem9=/Game/Blueprints/WBP_Counter
+MRUItem10=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem11=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem12=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
+MRUItem13=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
+MRUItem14=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
+MRUItem15=/Game/Materials/BP_FloorMaterialInstance
+MRUItem16=/Game/Blueprints/BP_Crosshair
+MRUItem17=/Game/Materials/BP_FloorMaterial
+MRUItem18=/Game/Materials/BP_CharacterMaterialInstance
+MRUItem19=/Game/Materials/BP_CharacterMaterial
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2247,7 +2277,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=BlueprintLog
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2269,7 +2299,7 @@ bUseUnsortedMenus=False
 
 [WidgetTemplatesExpanded]
 Editor=False
-Input=False
+Input=True
 Lists=False
 Misc=False
 Optimization=False
