Random spawn location added

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -99,6 +99,7 @@ LastExecutedLaunchName=FILIP-KOMPUTER
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -208,9 +209,7 @@ WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
-OpenAssetsAtExit=/Game/Blueprints/WBP_Crosshair.WBP_Crosshair
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1196,10 +1195,40 @@ EditableTextBox.Events=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Physics=True
+TargetPoint.Collision=True
+TargetPoint.Lighting=True
+TargetPoint.Rendering=True
+TargetPoint.Navigation=True
+TargetPoint.VirtualTexture=True
+TargetPoint.Tags=True
+TargetPoint.Activation=True
+TargetPoint.Cooking=True
+TargetPoint.ArrowComponent=True
+TargetPoint.Replication=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
+Main_C.Tick=True
+Main_C.Replication=True
+Main_C.Actor=True
+Main_C.Input=True
+MaterialBillboardComponent.Variable=True
+MaterialBillboardComponent.TransformCommon=True
+MaterialBillboardComponent.Sockets=True
+MaterialBillboardComponent.Sprite=True
+MaterialBillboardComponent.ComponentTick=True
+MaterialBillboardComponent.Rendering=True
+MaterialBillboardComponent.Navigation=True
+MaterialBillboardComponent.Tags=True
+MaterialBillboardComponent.ComponentReplication=True
+MaterialBillboardComponent.Cooking=True
+MaterialBillboardComponent.Events=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.04.11-20.01.00
-TheMaze.LastCompileMethod=Runtime
+TheMaze.TimeStamp=2021.04.11-21.19.45
+TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2083,7 +2112,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Materials
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2111,6 +2140,8 @@ ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ViewMode=0
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2180,6 +2211,7 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/TheMaze.FPSExtractionZone;
 RecentlyPlaced=/Script/TheMaze.ExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_ExtractionZone.BP_ExtractionZone;
@@ -2193,10 +2225,10 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/WBP_Crosshair
-MRUItem1=/Game/Blueprints/BP_CFPSCharacter
-MRUItem2=/Game/Blueprints/WBP_ScoreCounter
-MRUItem3=/Game/Blueprints/BP_CollectibleSphere
+MRUItem0=/Game/Blueprints/BP_CollectibleSphere
+MRUItem1=/Game/Blueprints/WBP_Crosshair
+MRUItem2=/Game/Blueprints/BP_CFPSCharacter
+MRUItem3=/Game/Blueprints/WBP_ScoreCounter
 MRUItem4=/Game/Blueprints/BP_PointsWidget
 MRUItem5=/Game/MyExtractionZone
 MRUItem6=/Game/Blueprints/BP_ExtractionZone
