Mission Complete method added

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -203,16 +203,14 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Gl
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
 MeshProcessingEnterpriseSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Jump,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUp,InputSettings.Bindings.AxisMappings.LookUpRate,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+StaticMeshComponent=
+BP_ViewPoint_C=StaticMeshComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BP_Interactable.BP_Interactable
-OpenAssetsAtExit=/Engine/VREditor/BasicMeshes/MI_Ball_01.MI_Ball_01
-OpenAssetsAtExit=/Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1244,10 +1242,37 @@ Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
 BP_Interactable_C.TransformCommon=True
+BP_MazeGameMode2_C.Tick=True
+BP_MazeGameMode2_C.Classes=True
+BP_MazeGameMode2_C.Game=True
+BP_MazeGameMode2_C.GameMode=True
+WidgetComponent.TransformCommon=True
+WidgetComponent.Materials=True
+WidgetComponent.UserInterface=True
+WidgetComponent.Interaction=True
+WidgetComponent.Physics=True
+WidgetComponent.Animation=True
+WidgetComponent.Collision=True
+WidgetComponent.Layers=True
+WidgetComponent.Rendering=True
+WidgetComponent.Navigation=True
+WidgetComponent.VirtualTexture=True
+WidgetComponent.Tags=True
+WidgetComponent.ComponentReplication=True
+WidgetComponent.Variable=True
+WidgetComponent.Cooking=True
+BP_ViewPoint_C.Tick=True
+BP_ViewPoint_C.Replication=True
+BP_ViewPoint_C.Rendering=True
+BP_ViewPoint_C.Collision=True
+BP_ViewPoint_C.Actor=True
+BP_ViewPoint_C.Input=True
+BP_MazeGameMode2_C.Spectating=True
+BP_ViewPoint_C.TransformCommon=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.04.17-12.49.26
-TheMaze.LastCompileMethod=Runtime
+TheMaze.TimeStamp=2021.04.24-21.17.40
+TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2021.03.03-22.11.19
@@ -2216,10 +2241,10 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
-TextBlock=
-TextLayoutWidget=
-Widget=
-Visual=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 
 [Directories2]
 UNR=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content/Maps
@@ -2236,6 +2261,7 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/BP_ViewPoint.BP_ViewPoint;
 RecentlyPlaced=/Game/Blueprints/BP_Interactable.BP_Interactable;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/TheMaze.FPSExtractionZone;
@@ -2251,26 +2277,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_CFPSCharacter
-MRUItem1=/Engine/VREditor/BasicMeshes/MI_Ball_01
-MRUItem2=/Engine/VREditor/BasicMeshes/SM_Cube_01
-MRUItem3=/Game/Blueprints/BP_Interactable
-MRUItem4=/Game/Blueprints/BP_CollectibleSphere
-MRUItem5=/Game/Blueprints/WBP_Crosshair
-MRUItem6=/Game/Blueprints/WBP_ScoreCounter
-MRUItem7=/Game/Blueprints/BP_PointsWidget
-MRUItem8=/Game/MyExtractionZone
-MRUItem9=/Game/Blueprints/BP_ExtractionZone
-MRUItem10=/Game/Blueprints/ExtractionZone2_Blueprint
-MRUItem11=/Game/Blueprints/BP_MazeGameMode
-MRUItem12=/Game/Blueprints/WBP_Counter
-MRUItem13=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem14=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem15=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem16=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
-MRUItem17=/Game/Assets/C4D_Wall_Melange/Geometries/Cube
-MRUItem18=/Game/Materials/BP_FloorMaterialInstance
-MRUItem19=/Game/Blueprints/BP_Crosshair
+MRUItem0=/Game/Blueprints/BP_MazeGameMode2
+MRUItem1=/Game/Blueprints/BP_ViewPoint
+MRUItem2=/Game/Blueprints/BP_GameComplete
+MRUItem3=/Game/Blueprints/WBP_Crosshair
+MRUItem4=/Game/Blueprints/BP_MazeGameMode
+MRUItem5=/Game/Blueprints/BP_CFPSCharacter
+MRUItem6=/Engine/VREditor/BasicMeshes/MI_Ball_01
+MRUItem7=/Engine/VREditor/BasicMeshes/SM_Cube_01
+MRUItem8=/Game/Blueprints/BP_Interactable
+MRUItem9=/Game/Blueprints/BP_CollectibleSphere
+MRUItem10=/Game/Blueprints/WBP_ScoreCounter
+MRUItem11=/Game/Blueprints/BP_PointsWidget
+MRUItem12=/Game/MyExtractionZone
+MRUItem13=/Game/Blueprints/BP_ExtractionZone
+MRUItem14=/Game/Blueprints/ExtractionZone2_Blueprint
+MRUItem15=/Game/Blueprints/WBP_Counter
+MRUItem16=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem17=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem18=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
+MRUItem19=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
@@ -2280,7 +2306,7 @@ MRUItem19=/Game/Blueprints/BP_Crosshair
 /Game/Materials/BP_FloorMaterialInstance.BP_FloorMaterialInstance=0
 /Game/Blueprints/BP_CFPSCharacter.BP_CFPSCharacter=0
 /Game/Blueprints/BP_Crosshair.BP_Crosshair=1
-/Game/Blueprints/WBP_Crosshair.WBP_Crosshair=1
+/Game/Blueprints/WBP_Crosshair.WBP_Crosshair=0
 /Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange.C4D_Wall_Melange=0
 /Game/Assets/C4D_Wall_Melange/Geometries/Cube.Cube=1
 /Game/Assets/Meshes/C4D_Wall_Melange/Geometries/Cube.Cube=0
@@ -2288,11 +2314,14 @@ MRUItem19=/Game/Blueprints/BP_Crosshair
 /Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7.Cube_7=1
 /Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D.StaticMesh_WallObject_C4D=1
 /Game/Blueprints/BP_CollectibleSphere.BP_CollectibleSphere=0
-/Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode=1
+/Game/Blueprints/BP_MazeGameMode.BP_MazeGameMode=0
 /Game/Blueprints/ExtractionZone2_Blueprint.ExtractionZone2_Blueprint=1
 /Game/Maps/Main.Main:PersistentLevel.ExtractionZone_1=1
 /Game/Blueprints/BP_PointsWidget.BP_PointsWidget=1
 /Engine/VREditor/BasicMeshes/SM_Cube_01.SM_Cube_01=0
+/Game/Blueprints/BP_MazeGameMode2.BP_MazeGameMode2=0
+/Game/Blueprints/BP_GameComplete.BP_GameComplete=1
+/Game/Blueprints/BP_ViewPoint.BP_ViewPoint=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
