--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1269,9 +1269,27 @@ BP_ViewPoint_C.Actor=True
 BP_ViewPoint_C.Input=True
 BP_MazeGameMode2_C.Spectating=True
 BP_ViewPoint_C.TransformCommon=True
+BP_CFPSCharacter_C.Gameplay=True
+MeshProcessingEnterpriseSettings.Settings=True
+BP_FPSExtractionZone_C.Tick=True
+BP_FPSExtractionZone_C.Gameplay=True
+BP_FPSExtractionZone_C.Replication=True
+BP_FPSExtractionZone_C.Rendering=True
+BP_FPSExtractionZone_C.Collision=True
+BP_FPSExtractionZone_C.Actor=True
+BP_FPSExtractionZone_C.Input=True
+BP_FPSExtractionZone_C.TransformCommon=True
+BP_FPSExtractionZone_C.ComponentTick=True
+BP_FPSExtractionZone_C.Shape=True
+BP_FPSExtractionZone_C.Navigation=True
+BP_FPSExtractionZone_C.Physics=True
+BP_FPSExtractionZone_C.Tags=True
+BP_FPSExtractionZone_C.ComponentReplication=True
+BP_FPSExtractionZone_C.Variable=True
+BP_FPSExtractionZone_C.Cooking=True
 
 [ModuleFileTracking]
-TheMaze.TimeStamp=2021.04.24-21.17.40
+TheMaze.TimeStamp=2021.04.30-19.32.59
 TheMaze.LastCompileMethod=External
 PakFile.TimeStamp=2021.03.03-22.11.16
 PakFile.LastCompileMethod=Unknown
@@ -2156,7 +2174,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Materials
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2261,8 +2279,9 @@ Level=C:/1 Projekt Obiektowe/TheMazeGame/TheMaze/TheMaze/Content
 Project=D:/Epic Games/UE_4.26/
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/BP_ViewPoint.BP_ViewPoint;
+RecentlyPlaced=/Game/Blueprints/BP_FPSExtractionZone.BP_FPSExtractionZone;
 RecentlyPlaced=/Game/Blueprints/BP_Interactable.BP_Interactable;
+RecentlyPlaced=/Game/Blueprints/BP_ViewPoint.BP_ViewPoint;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/TheMaze.FPSExtractionZone;
 RecentlyPlaced=/Script/TheMaze.ExtractionZone;
@@ -2277,26 +2296,26 @@ RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasic
 RecentlyPlaced=/Script/TheMaze.CFPSCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_MazeGameMode2
-MRUItem1=/Game/Blueprints/BP_ViewPoint
-MRUItem2=/Game/Blueprints/BP_GameComplete
-MRUItem3=/Game/Blueprints/WBP_Crosshair
-MRUItem4=/Game/Blueprints/BP_MazeGameMode
-MRUItem5=/Game/Blueprints/BP_CFPSCharacter
-MRUItem6=/Engine/VREditor/BasicMeshes/MI_Ball_01
-MRUItem7=/Engine/VREditor/BasicMeshes/SM_Cube_01
-MRUItem8=/Game/Blueprints/BP_Interactable
-MRUItem9=/Game/Blueprints/BP_CollectibleSphere
-MRUItem10=/Game/Blueprints/WBP_ScoreCounter
-MRUItem11=/Game/Blueprints/BP_PointsWidget
-MRUItem12=/Game/MyExtractionZone
-MRUItem13=/Game/Blueprints/BP_ExtractionZone
-MRUItem14=/Game/Blueprints/ExtractionZone2_Blueprint
-MRUItem15=/Game/Blueprints/WBP_Counter
-MRUItem16=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
-MRUItem17=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
-MRUItem18=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
-MRUItem19=/Game/Assets/C4D_Wall_Melange/C4D_Wall_Melange
+MRUItem0=/Game/Blueprints/BP_FPSExtractionZone
+MRUItem1=/Game/Blueprints/BP_CFPSCharacter
+MRUItem2=/Game/Blueprints/BP_MazeGameMode2
+MRUItem3=/Game/Blueprints/BP_ViewPoint
+MRUItem4=/Game/Blueprints/BP_GameComplete
+MRUItem5=/Game/Blueprints/WBP_Crosshair
+MRUItem6=/Game/Blueprints/BP_MazeGameMode
+MRUItem7=/Engine/VREditor/BasicMeshes/MI_Ball_01
+MRUItem8=/Engine/VREditor/BasicMeshes/SM_Cube_01
+MRUItem9=/Game/Blueprints/BP_Interactable
+MRUItem10=/Game/Blueprints/BP_CollectibleSphere
+MRUItem11=/Game/Blueprints/WBP_ScoreCounter
+MRUItem12=/Game/Blueprints/BP_PointsWidget
+MRUItem13=/Game/MyExtractionZone
+MRUItem14=/Game/Blueprints/BP_ExtractionZone
+MRUItem15=/Game/Blueprints/ExtractionZone2_Blueprint
+MRUItem16=/Game/Blueprints/WBP_Counter
+MRUItem17=/Game/Assets/Meshes/C4D_WallObject/StaticMesh_WallObject_C4D
+MRUItem18=/Game/Assets/Meshes/C4D_WallObject/Geometries/Cube_7
+MRUItem19=/Game/Assets/Meshes/C4D_Wall_Melange/MazeWall
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_CFPSCharacter.BP_CFPSCharacter=0
